@@ -1,3 +1,9 @@
+2004-11-19  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b275
+
+	* Fix: Regex in despam comments were broken.
+
+	* Change: Tweaked Layout of despam comments.
+
 2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b274
 
 	* Fix: Try and detect a corrupt albumdb.dat and rebuild without
